[gd_scene load_steps=3 format=3 uid="uid://dbbcwjbrv77r0"]

[ext_resource type="Script" path="res://player/player.gd" id="1_hqs4s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lkq1v"]
radius = 0.4
height = 1.8

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_hqs4s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_lkq1v")

[node name="axis_y" type="Node3D" parent="."]

[node name="axis_x" type="Node3D" parent="axis_y"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="axis_y/axis_x"]

[node name="ray_uncrouching" type="RayCast3D" parent="."]
target_position = Vector3(0, 1.4, 0)
